<resources>
    <string name="app_name">muZic</string>
    <string name="settings_title">Settings</string>

    <string name="albums_title">Albums</string>
    <string name="artists_title">Artists</string>
    <string name="songs_title">Songs</string>
    <string name="queue_title">Queue</string>
    <string name="search_title">Search</string>
    
    <string name="custom_action_replay">Replay</string>
    <string name="custom_action_random_song_in_queue">Random</string>

    <string name="permission_denied_title">Permission</string>
    <string name="permission_denied_message">Try again</string>
    <string name="permission_denied_button_text">In order to play the music on your device the application requires the permission to read external storage.</string>
    <string name="permission_denied_never_show_again_message">In order to play the music on your device muZic requires the permission to read external storage.</string>
    <string name="permission_denied_never_show_again_button_text">Go to settings</string>

    <string name="permission_not_available_auto_error_message">muZic requires media permissions, open the app when safe to set them</string>

    <string name="album_image_description">Album image</string>
    <string name="skip_next_image_description">Skip next</string>
    <string name="skip_previous_image_description">Skip previous</string>
    <string name="close_queue_image_description">Close queue</string>
    <string name="open_queue_image_description">Open queue</string>
    <string name="back_image_description">Back</string>
    <string name="title_text_placeholder">TITLE PLACEHOLDER</string>
    <string name="artist_text_placeholder">ARTIST PLACEHOLDER</string>
    <string name="duration_text_placeholder">00:00</string>

    <string name="queue_empty_description">The queue is empty</string>
    <string name="queue_empty_image_description">Empty queue</string>

    <!-- Notification strings -->
    <string name="play_text">Play</string>
    <string name="pause_text">Pause</string>
    <string name="skip_next_text">Skip next</string>
    <string name="skip_previous_text">Skip previous</string>
    <string name="rewind_text">Rewind</string>
    <string name="channel_description">This channel is used by muZic to show on the notification the current media being played</string>

    <!-- Preference Titles-->
    <string name="customization_header">Customization</string>
    <string name="app_info_header">App info</string>

    <!-- Customization preferences -->
    <string name="theme_key_shared_prefs">theme_option</string>
    <string name="theme_title">Application theme</string>
    <string name="theme_light_entry">light</string>
    <string name="theme_dark_entry">dark</string>
    <string name="theme_default_entry">default</string>

    <string name="launcher_shortcut_key_shared_prefs">shortcut_option</string>
    <string name="launcher_shortcut_title">Enable launcher shortcuts</string>
    <string name="launcher_shortcut_summary_on">Tap and hold the launcher icon to see the shortcuts</string>
    <string name="launcher_shortcut_summary_off">Launcher shortcuts are disabled</string>
    <string name="launcher_shortcut_summary_not_supported">Only supported on android N or later</string>

    <string name="equalizer_title">Equalizer</string>
    <string name="equalizer_summary">Edit equalizer settings of your phone</string>

    <!-- App info preferences -->
    <string name="app_info_title">muZic (version 1.1)</string>
    <string name="small_player_play_description">Play pause button</string>
    <string name="shared_prefs_equalizer_option">equalizer_option</string>


    <!-- First time tutorial shared preference -->
    <string name="display_tutorial_option">display_tutorial</string>

</resources>
