<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Describes the settings option available allowing the system to handle the save/update -->

    <PreferenceCategory app:title="@string/customization_header">

        <ListPreference
            app:title="@string/theme_title"
            app:icon="@drawable/ic_light_dark_theme"
            app:key="@string/theme_key_shared_prefs"
            app:entries="@array/theme_before_q_values"
            app:entryValues="@array/theme_entries"
            app:defaultValue="@string/theme_default_entry"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:title="@string/launcher_shortcut_title"
            app:key="@string/launcher_shortcut_key_shared_prefs"
            app:summaryOn="@string/launcher_shortcut_summary_on"
            app:summaryOff="@string/launcher_shortcut_summary_off"
            app:defaultValue="false"
            app:icon="@drawable/ic_launch"/>

        <Preference
            app:key="equalizer_option"
            app:title="@string/equalizer_title"
            app:summary="@string/equalizer_summary"
            app:icon="@drawable/ic_equalizer"/>

    </PreferenceCategory>


    <PreferenceCategory app:title="@string/app_info_header">

        <Preference
            app:title="@string/app_info_title"
            app:icon="@mipmap/ic_launcher_round"/>

    </PreferenceCategory>

</PreferenceScreen>