<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <ImageView
        android:id="@+id/album_art_bs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.5"
        android:contentDescription="@string/album_image_description"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/title_bs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:gravity="center"
        android:text="@string/title_text_placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="28sp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/play_button_bs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/play_button_bs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/play_text"
        app:icon="@drawable/ic_play"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@id/album_art_bs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>